SEO small fixes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tagi -->
-    <title>wytlumacz.com - Konsultant AI Daniel Gąszczyk | Automatyzacja dla Firm</title>
-    <meta name="description" content="Zwiększ efektywność firmy o 25% w 90 dni dzięki wdrożeniom AI. Praktyczne rozwiązania dla polskich MŚP. Umów bezpłatną konsultację!">    <meta name="keywords" content="konsultant AI Poznań, automatyzacja procesów biznesowych, wdrożenie AI w firmie, doradztwo AI, rozwiązania AI dla MŚP, Daniel Gąszczyk, generatywna AI, LLM, wytlumacz.com">
+    <title>Konsultant AI Daniel Gąszczyk | Automatyzacja dla Firm</title>
+    <meta name="description" content="Zwiększ efektywność firmy o 25% w 90 dni dzięki wdrożeniom AI. Praktyczne rozwiązania dla polskich MŚP. Umów bezpłatną konsultację!">    
+    <meta name="keywords" content="konsultant AI Poznań, automatyzacja procesów biznesowych, wdrożenie AI w firmie, doradztwo AI, rozwiązania AI dla MŚP, Daniel Gąszczyk, generatywna AI, LLM, wytlumacz.com">
     <meta name="author" content="Daniel Gąszczyk">
     <meta name="robots" content="index, follow">
        
