--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div data-aos="fade-up" data-aos-delay="300" class="mt-16 max-w-4xl mx-auto">
-                    <img src="https://placehold.co/896x504/e2e8f0/1e293b?text=Automatyzacja+Procesów+AI" alt="Wizualizacja automatyzacji AI" class="rounded-2xl shadow-2xl mx-auto" onerror="this.onerror=null;this.src='https://placehold.co/896x504/e2e8f0/1e293b?text=Błąd+ładowania+obrazu';">
+                    <img src="photo-main-computer-1.webp" alt="Wizualizacja automatyzacji AI" class="rounded-2xl shadow-2xl mx-auto" onerror="this.onerror=null;this.src='https://placehold.co/896x504/e2e8f0/1e293b?text=Błąd+ładowania+obrazu';">
                 </div>
             </div>
         </section>
